Archive2/ac/9d959f7d1acb17/output
main.cpp: In instantiation of 'CRTP<Derived>::CRTP() [with Derived = Foo]':
main.cpp:15:8:   required from here
main.cpp:9:9: error: static assertion failed: 
         static_assert(std::is_base_of<CRTP, Derived>::value, "");
         ^
