Archive2/ac/9d959f7d1acb17/main.cpp
#include <type_traits>


template<typename Derived>
struct CRTP
{
    CRTP()
    {
        static_assert(std::is_base_of<CRTP, Derived>::value, "");
    }
};


struct Foo {};
struct Bar : CRTP<Foo> {}; // oops!


int main()
{
    Bar bar;
}
